2004-07-02	Florian Boor <florian.boor@kernelconcepts.de>

	* minilite.c: simpad*() Fixed bug causing segfault.
	* minilite.c: Implemented proper resizing for panels of different size.
	* Makefile: Version to 0.43

2004-06-23	Florian Boor <florian.boor@kernelconcepts.de>
	* minilite.c: Fixed bug causing segfault if integral_set_level()
	  is called on other platforms.
	
2004-06-22	Florian Boor <florian.boor@kernelconcepts.de>
	* fixed evil bug
	* eleased V 0.42
	* minilite.c: Added simpad support.
	* minilite.c: set_level() Added sanity check.
	
2004-06-21	Florian Boor <florian.boor@kernelconcepts.de>
	* Fixed ChangeLog :-0
	* Released V 0.41
	* minilite.c: Removed dependency from iPaq kernel headers.
	* minilite.c: Fixed several warnings.
	* Makefile: Some updates to become OE-compatible.

2004-06-20	Florian Boor <florian.boor@kernelconcepts.de>
	* Major rework: 
		We detect the device at runtime now.
		Added Zaurus support.
		Sucessfulls tested on H5550 and Collie.

2004-04-19	Florian Boor <florian.boor@kernelconcepts.de>
	* Added support for H&W integral 90200 device. (alternate to ipaq)

2004-01-08	Florian Boor <florian.boor@kernelconcepts.de>
	* Added $(INSTALL) definition/usage to Makefile.

2004-01-05	Florian Boor <florian.boor@kernelconcepts.de>
	* Fixed model info.
	* Changed slider range for H5xxx.

2003-09-26	Nils Faerber <nils@kernelconcepts.de>
	* bump to version 0.30
	* removed system() calls and replaced with ioctl()s
	* added code to detect iPaq model to accomodate slider range
	  (different models have different light level ranges)

all before	Philip Blundell  <philb@gnu.org>
	* initial code