@@ -1,3 +1,8 @@
+
+2004-07-03	Florian Boor <florian.boor@kernelconcepts.de>
+
+	* minilite.c: Added support for new Simpad kernel interface.
+
 2004-07-02	Florian Boor <florian.boor@kernelconcepts.de>
 
 	* minilite.c: simpad*() Fixed bug causing segfault.
